# pet_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  help.txt  main.py  pyproject.toml  start
